--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -67,7 +67,7 @@
       "description": "प्रतिस्पर्धी ब्याज दरों पर अपने स्वर्ण आभूषणों के खिलाफ तुरंत ऋण प्राप्त करें",
       "features": {
         "title": "विशेषताएं",
-        "feature1": "30 मिनट के भीतर त्वरित प्रोसेसिंग",
+        "feature1": "5 मिनट के भीतर त्वरित प्रोसेसिंग",
         "feature2": "7.5% प्रति वर्ष से ब्याज दरें",
         "feature3": "स्वर्ण मूल्य का 75% तक ऋण राशि",
         "feature4": "लचीले पुनर्भुगतान विकल्प"
@@ -201,5 +201,132 @@
     "quickLinks": "त्वरित लिंक",
     "contact": "संपर्क",
     "address": "पता"
-  }
+  },
+    "goldLoan": {
+      "title": "सोने का लोन आवेदन",
+      "fullName": "पूरा नाम",
+      "phoneNumber": "फोन नंबर",
+      "email": "ईमेल पता",
+      "goldWeight": "सोने का वजन (ग्राम)",
+      "loanAmount": "आवश्यक लोन राशि",
+      "submit": "आवेदन जमा करें"
+    },
+      "whyChooseUs": {
+        "title": "हमें क्यों चुनें",
+        "features": {
+          "lowInterest": {
+            "title": "कम ब्याज दरें",
+            "desc": "केवल 0.75% प्रति माह से शुरू"
+          },
+          "instantDisbursal": {
+            "title": "तत्काल भुगतान",
+            "desc": "30 मिनट के भीतर नकद प्राप्त करें"
+          },
+          "safeStorage": {
+            "title": "सुरक्षित भंडारण",
+            "desc": "बीमा के साथ बैंक-ग्रेड वॉल्ट"
+          },
+          "flexibleRepayment": {
+            "title": "लचीला पुनर्भुगतान",
+            "desc": "3 से 12 महीने तक की अवधि चुनें"
+          }
+        },
+        "trusted": "द्वारा विश्वसनीय",
+        "customers": "संतुष्ट ग्राहक"
+      },
+        "hero1": {
+          "mainTitle": "तत्काल सोने के ऋण",
+          "subTitle": "सबसे कम ब्याज दरों के साथ",
+          "badges": ["100% पारदर्शी", "सुरक्षित वॉल्ट भंडारण", "तेज प्रसंस्करण"],
+          "goldRate": "आज का सोने का भाव:",
+          "cta": {
+            "applyOnline": "ऑनलाइन आवेदन करें",
+            "checkEligibility": "पात्रता जांचें"
+          }
+        },
+        "goldLoan1": {
+          "title": "सोने का लोन आवेदन",
+          "fullName": "पूरा नाम",
+          "phoneNumber": "फोन नंबर",
+          "email": "ईमेल पता",
+          "goldWeight": "सोने का वजन (ग्राम)",
+          "loanAmount": "आवश्यक लोन राशि",
+          "submit": "आवेदन जमा करें"
+        },
+          "LoanApplicationForm": {
+            "title": "सोने का लोन आवेदन",
+            "description": "सोने का लोन लेने के लिए नीचे दिया गया फॉर्म भरें",
+            "fields": {
+              "name": "पूरा नाम",
+              "email": "ईमेल",
+              "phone": "फोन नंबर",
+              "goldType": "सोने की शुद्धता",
+              "goldWeight": "सोने का वजन (ग्राम)",
+              "loanAmount": "ऋण राशि (₹)",
+              "tenure": "ऋण अवधि (महीने)",
+              "address": "पता",
+              "agreeTerms": "मैं नियम और शर्तों से सहमत हूं"
+            },
+            "placeholders": {
+              "name": "अपना पूरा नाम दर्ज करें",
+              "email": "अपना ईमेल दर्ज करें",
+              "phone": "अपना फोन नंबर दर्ज करें",
+              "goldWeight": "सोने का वजन दर्ज करें",
+              "loanAmount": "ऋण राशि दर्ज करें",
+              "address": "अपना पूरा पता दर्ज करें"
+            },
+            "options": {
+              "selectTenure": "अवधि चुनें",
+              "months": "महीने",
+              "goldTypes": {
+                "22K": "22K सोना",
+                "18K": "18K सोना",
+                "24K": "24K सोना"
+              }
+            },
+            "submit": "आवेदन जमा करें",
+            "processing": "प्रसंस्करण..."
+          },
+            "loanServices": {
+              "title": "सोने के लोन सेवाएं",
+              "subtitle": "तेज, सुरक्षित और सस्ती सोने की लोन सेवाएं आपकी जरूरतों के अनुसार",
+              "quickApproval": {
+                "title": "त्वरित लोन स्वीकृति",
+                "description": "हमारी सरल प्रक्रिया के साथ घंटों में धन प्राप्त करें",
+                "detail1": "यूनिगोल्ड सुनिश्चित करता है कि हमारे पास वित्तीय आपात स्थिति के दौरान आसानी सुनिश्चित करने के लिए ग्राहकों के लिए सर्वोत्तम ऋण विकल्प उपलब्ध हैं।",
+                "detail2": "हमारे ग्राहकों के पास सोने का ऋण लेने का विकल्प है, जो भारत में ऋण प्राप्त करने का सबसे आसान तरीका है।",
+                "detail3": "चाहे वह कोई आपातकालीन चिकित्सा मामला हो, ट्यूशन फीस का भुगतान हो, या व्यापार विस्तार के लिए धन की आवश्यकता हो, हम न्यूनतम दस्तावेजीकरण के साथ त्वरित सेवा की गारंटी देते हैं।"
+              },
+              "interestRates": {
+                "title": "प्रतिस्पर्धी ब्याज दरें",
+                "description": "किसी भी छिपे हुए शुल्क के बिना सबसे कम सोने की ऋण दरें",
+                "detail1": "जब सोने के ऋण की बात आती है, तो सामर्थ्य महत्वपूर्ण है। हम उद्योग में सोने के ऋण पर सर्वोत्तम ब्याज दरें प्रदान करते हैं।",
+                "detail2": "हमारी खुली मूल्य निर्धारण रणनीति किसी भी छिपे हुए शुल्क को रोकने में मदद करती है।",
+                "detail3": "आपके ऋण का आकार चाहे जो भी हो, हमारी कम ब्याज दर इसे चुकाना आसान बनाती है।"
+              },
+              "repayment": {
+                "title": "लचीला पुनर्भुगतान विकल्प",
+                "description": "एक पुनर्भुगतान योजना चुनें जो आपके वित्त के अनुरूप हो",
+                "detail1": "यूनिगोल्ड फाइनेंस में, हम आपकी वित्तीय स्थिति के अनुरूप सोने के ऋण पुनर्भुगतान योजनाएं प्रदान करते हैं।",
+                "detail2": "चाहे आप मासिक किस्त, त्रैमासिक भुगतान या ऋण अवधि के अंत में एकमुश्त भुगतान पसंद करते हैं, हम आपकी मदद कर सकते हैं।",
+                "detail3": "हमारी अनुरूप पुनर्भुगतान योजनाएं आपके नकदी प्रवाह के साथ संरेखित होती हैं।"
+              },
+              "vaultStorage": {
+                "title": "सुरक्षित वॉल्ट भंडारण",
+                "description": "आपके कीमती सोने के लिए बैंक-ग्रेड सुरक्षा",
+                "detail1": "आपका सोना कीमती है, और यूनिगोल्ड फाइनेंस में, हम इसे सर्वोत्तम देखभाल के साथ संभालते हैं।",
+                "detail2": "सभी गिरवी रखे गए सोने को पूरी तरह से बीमाकृत किया जाता है, जो आपको पूर्ण मन की शांति प्रदान करता है।",
+                "detail3": "सुरक्षा और पारदर्शिता के प्रति हमारी प्रतिबद्धता सुनिश्चित करती है कि आपका सोना सर्वोत्तम हाथों में है।"
+              },
+              "cta": {
+                "title": "शुरू करने के लिए तैयार हैं?",
+                "description": "आज ही सोने का ऋण के लिए आवेदन करें और न्यूनतम दस्तावेजीकरण और प्रतिस्पर्धी दरों के साथ तुरंत धन तक पहुंच प्राप्त करें।",
+                "buttonText": "अभी आवेदन करें"
+              }
+            }
+          
+        
+      
+    
+  
 }
