--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -185,7 +185,7 @@
     "title": "ବିଶେଷ ସୁନା ଋଣ ଅଫର!",
     "benefits": {
       "title": "ସୁବିଧାଗୁଡ଼ିକ",
-      "point1": "30 ମିନିଟ ମଧ୍ୟରେ ତୁରନ୍ତ ମଞ୍ଜୁରୀ",
+      "point1": "5 ମିନିଟ ମଧ୍ୟରେ ତୁରନ୍ତ ମଞ୍ଜୁରୀ",
       "point2": "7.5% ରୁ ଆରମ୍ଭ ହେଉଥିବା ସୁଧ ହାର",
       "point3": "କୌଣସି ଲୁକ୍କାୟିତ ଶୁଳ୍କ ନାହିଁ",
       "point4": "ନମନୀୟ ପୁନଃପ୍ରଦାନ ବିକଳ୍ପଗୁଡ଼ିକ"
@@ -201,5 +201,132 @@
     "quickLinks": "ଦ୍ରୁତ ଲିଙ୍କ",
     "contact": "ଯୋଗାଯୋଗ",
     "address": "ଠିକଣା"
-  }
+  },
+      "goldLoan": {
+        "title": "ସୁନା ଋଣ ଆବେଦନ",
+        "fullName": "ପୂରା ନାମ",
+        "phoneNumber": "ଫୋନ୍ ନମ୍ବର",
+        "email": "ଇମେଲ ଠିକଣା",
+        "goldWeight": "ସୁନାର ଓଜନ (ଗ୍ରାମ)",
+        "loanAmount": "ଆବଶ୍ୟକ ଋଣ ପରିମାଣ",
+        "submit": "ଆବେଦନ ଦାଖଲ କରନ୍ତୁ"
+      },
+        "whyChooseUs": {
+          "title": "ଆମକୁ କାହିଁକି ବାଛିବେ",
+          "features": {
+            "lowInterest": {
+              "title": "କମ ସୁଧ ହାର",
+              "desc": "କେବଳ 0.75% ପ୍ରତି ମାସରୁ ଆରମ୍ଭ"
+            },
+            "instantDisbursal": {
+              "title": "ତୁରନ୍ତ ପ୍ରଦାନ",
+              "desc": "30 ମିନିଟ୍ ମଧ୍ୟରେ ନଗଦ ପାଆନ୍ତୁ"
+            },
+            "safeStorage": {
+              "title": "ନିରାପଦ ସଂରକ୍ଷଣ",
+              "desc": "ବିମା ସହିତ ବ୍ୟାଙ୍କ-ଗ୍ରେଡ୍ ଭଲ୍ଟ"
+            },
+            "flexibleRepayment": {
+              "title": "ନମନୀୟ ପରିଶୋଧ",
+              "desc": "3 ରୁ 12 ମାସ ପର୍ଯ୍ୟନ୍ତ ଅବଧି ବାଛନ୍ତୁ"
+            }
+          },
+          "trusted": "ଦ୍ୱାରା ବିଶ୍ୱସ୍ତ",
+          "customers": "ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକ"
+        },
+          "hero1": {
+            "mainTitle": "ତୁରନ୍ତ ସୁନା ଋଣ",
+            "subTitle": "ସବୁଠାରୁ କମ ସୁଧ ହାର ସହିତ",
+            "badges": ["100% ସ୍ୱଚ୍ଛ", "ନିରାପଦ ଭଲ୍ଟ ସଂରକ୍ଷଣ", "ଦ୍ରୁତ ପ୍ରକ୍ରିୟାକରଣ"],
+            "goldRate": "ଆଜିର ସୁନା ମୂଲ୍ୟ:",
+            "cta": {
+              "applyOnline": "ଅନଲାଇନ୍ ଆବେଦନ କରନ୍ତୁ",
+              "checkEligibility": "ଯୋଗ୍ୟତା ଯାଞ୍ଚ କରନ୍ତୁ"
+            }
+          },
+          "goldLoan1": {
+            "title": "ସୁନା ଋଣ ଆବେଦନ",
+            "fullName": "ପୂରା ନାମ",
+            "phoneNumber": "ଫୋନ୍ ନମ୍ବର",
+            "email": "ଇମେଲ ଠିକଣା",
+            "goldWeight": "ସୁନାର ଓଜନ (ଗ୍ରାମ)",
+            "loanAmount": "ଆବଶ୍ୟକ ଋଣ ପରିମାଣ",
+            "submit": "ଆବେଦନ ଦାଖଲ କରନ୍ତୁ"
+          },
+            "LoanApplicationForm": {
+              "title": "ସୁନା ଋଣ ଆବେଦନ",
+              "description": "ସୁନା ଋଣ ପାଇଁ ନିମ୍ନଲିଖିତ ଫର୍ମ ପୂରଣ କରନ୍ତୁ",
+              "fields": {
+                "name": "ପୂରା ନାମ",
+                "email": "ଇମେଲ",
+                "phone": "ଫୋନ୍ ନମ୍ବର",
+                "goldType": "ସୁନାର ଶୁଦ୍ଧତା",
+                "goldWeight": "ସୁନାର ଓଜନ (ଗ୍ରାମ)",
+                "loanAmount": "ଋଣ ପରିମାଣ (₹)",
+                "tenure": "ଋଣ ଅବଧି (ମାସ)",
+                "address": "ଠିକଣା",
+                "agreeTerms": "ମୁଁ ନିୟମ ଏବଂ ସର୍ତ୍ତାବଳୀ ସହିତ ସହମତ"
+              },
+              "placeholders": {
+                "name": "ଆପଣଙ୍କର ପୂରା ନାମ ପ୍ରବେଶ କରନ୍ତୁ",
+                "email": "ଆପଣଙ୍କର ଇମେଲ ପ୍ରବେଶ କରନ୍ତୁ",
+                "phone": "ଆପଣଙ୍କର ଫୋନ୍ ନମ୍ବର ପ୍ରବେଶ କରନ୍ତୁ",
+                "goldWeight": "ସୁନାର ଓଜନ ପ୍ରବେଶ କରନ୍ତୁ",
+                "loanAmount": "ଋଣ ପରିମାଣ ପ୍ରବେଶ କରନ୍ତୁ",
+                "address": "ଆପଣଙ୍କର ସମ୍ପୂର୍ଣ୍ଣ ଠିକଣା ପ୍ରବେଶ କରନ୍ତୁ"
+              },
+              "options": {
+                "selectTenure": "ଅବଧି ଚୟନ କରନ୍ତୁ",
+                "months": "ମାସ",
+                "goldTypes": {
+                  "22K": "22K ସୁନା",
+                  "18K": "18K ସୁନା",
+                  "24K": "24K ସୁନା"
+                }
+              },
+              "submit": "ଆବେଦନ ଦାଖଲ କରନ୍ତୁ",
+              "processing": "ପ୍ରକ୍ରିୟାକରଣ..."
+            },
+              "loanServices": {
+                "title": "ସୁନା ଋଣ ସେବା",
+                "subtitle": "ଦ୍ରୁତ, ସୁରକ୍ଷିତ ଏବଂ ସହଜ ପରିଶୋଧ ଯୋଗ୍ୟ ସୁନା ଋଣ",
+                "quickApproval": {
+                  "title": "ଦ୍ରୁତ ଋଣ ଅନୁମୋଦନ",
+                  "description": "ଆମର ସରଳୀକୃତ ପ୍ରକ୍ରିୟା ସହିତ ଘଣ୍ଟା ମଧ୍ୟରେ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ",
+                  "detail1": "ଆମେ ଆପଣଙ୍କ ଆର୍ଥିକ ଅସୁବିଧା ସମୟରେ ସହଜ ଋଣ ପ୍ରାପ୍ତି ସୁନିଶ୍ଚିତ କରୁ |",
+                  "detail2": "ଆପଣ ମିନିଟ୍ ମଧ୍ୟରେ ଋଣ ପାଇଁ ଆବେଦନ କରିପାରିବେ ଏବଂ ଅଳ୍ପ ସମୟ ମଧ୍ୟରେ ଅର୍ଥ ପ୍ରାପ୍ତ କରିପାରିବେ |",
+                  "detail3": "ଚାହେଁ ତାହା ଜରୁରୀ ଚିକିତ୍ସା ପାଇଁ ହେଉ କି ବ୍ୟବସାୟ ବିସ୍ତାର ପାଇଁ, ଆମେ ନ୍ୟୁନତମ ଡକ୍ୟୁମେଣ୍ଟେସନ୍ ସହିତ ଦ୍ରୁତ ସେବା ପ୍ରଦାନ କରୁ |"
+                },
+                "interestRates": {
+                  "title": "ପ୍ରତିଯୋଗିତାମୂଳକ ସୁଧ ହାର",
+                  "description": "କୌଣସି ଲୁକ୍କାୟିତ ଖର୍ଚ୍ଚ ବିନା ସର୍ବନିମ୍ନ ସୁନା ଋଣ ହାର",
+                  "detail1": "ଆମେ ଉଦ୍ୟୋଗରେ ସର୍ବୋତ୍ତମ ସୁଧ ହାର ପ୍ରଦାନ କରୁ |",
+                  "detail2": "ଆମର ଖୋଲା ମୂଲ୍ୟ ନିର୍ଣ୍ଣୟ କୌଣସି ଅତିରିକ୍ତ ଖର୍ଚ୍ଚକୁ ରୋକିଥାଏ |",
+                  "detail3": "ଆପଣଙ୍କ ଋଣ ଯେପରି ହେଉନା କାହିଁକି, ଆମର କମ ସୁଧ ହାର ଏହାକୁ ସହଜରେ ପରିଶୋଧ କରିବାରେ ସାହାଯ୍ୟ କରେ |"
+                },
+                "repayment": {
+                  "title": "ନମନୀୟ ପରିଶୋଧ ବିକଳ୍ପ",
+                  "description": "ଆପଣଙ୍କ ଆର୍ଥିକ ସ୍ଥିତି ଅନୁଯାୟୀ ପରିଶୋଧ ଯୋଜନା ବାଛନ୍ତୁ",
+                  "detail1": "ଆମେ ଆପଣଙ୍କ ଆର୍ଥିକ ସ୍ଥିତି ଅନୁଯାୟୀ କଷ୍ଟମାଇଜ୍ କରାଯାଇଥିବା ପରିଶୋଧ ଯୋଜନା ପ୍ରଦାନ କରୁ |",
+                  "detail2": "ମାସିକ କିସ୍ତ, ତ୍ରୈମାସିକ କିମ୍ବା ଋଣ ଅବଧି ଶେଷରେ ଏକମୁଖ୍ତ ପରିଶୋଧ କରିବାକୁ ଚାହୁଁଥିଲେ, ଆମେ ଆପଣଙ୍କୁ ସେବା ପ୍ରଦାନ କରୁ |",
+                  "detail3": "ଆମର କଷ୍ଟମାଇଜ୍ ପରିଶୋଧ ଯୋଜନା ଆପଣଙ୍କ ନଗଦ ପ୍ରବାହ ସହିତ ମେଳ ଖାଇଥାଏ |"
+                },
+                "vaultStorage": {
+                  "title": "ସୁରକ୍ଷିତ ଭଲ୍ଟ ସଂରକ୍ଷଣ",
+                  "description": "ଆପଣଙ୍କ ମୂଲ୍ୟବାନ ସୁନା ପାଇଁ ବ୍ୟାଙ୍କ-ଗ୍ରେଡ୍ ସୁରକ୍ଷା",
+                  "detail1": "ଆପଣଙ୍କ ସୁନା ମୂଲ୍ୟବାନ, ଏବଂ ଆମେ ଏହାକୁ ସର୍ବୋତ୍ତମ ଯତ୍ନ ସହିତ ରଖୁ |",
+                  "detail2": "ସମସ୍ତ ଗିରଦ ସୁନା ସଂପୂର୍ଣ୍ଣ ଭାବରେ ବୀମାକୃତ, ଆପଣଙ୍କୁ ପୂର୍ଣ୍ଣ ମନଃଶାନ୍ତି ପ୍ରଦାନ କରେ |",
+                  "detail3": "ସୁରକ୍ଷା ଏବଂ ସ୍ୱଚ୍ଛତା ପ୍ରତି ଆମର ପ୍ରତିବଦ୍ଧତା ନିଶ୍ଚିତ କରେ ଯେ ଆପଣଙ୍କ ସୁନା ସର୍ବୋତ୍ତମ ହାତରେ ଅଛି |"
+                },
+                "cta": {
+                  "title": "ଆରମ୍ଭ କରିବାକୁ ପ୍ରସ୍ତୁତ ଅଛନ୍ତି କି?",
+                  "description": "ଆଜି ଏକ ସୁନା ଋଣ ପାଇଁ ଆବେଦନ କରନ୍ତୁ ଏବଂ ନ୍ୟୁନତମ ଡକ୍ୟୁମେଣ୍ଟେସନ୍ ଏବଂ ପ୍ରତିଯୋଗିତାମୂଳକ ହାର ସହିତ ତୁରନ୍ତ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ |",
+                  "buttonText": "ବର୍ତ୍ତମାନ ଆବେଦନ କରନ୍ତୁ"
+                }
+              }
+            
+          
+        
+      
+    
 }
