--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -323,10 +323,78 @@
                 "description": "आज ही सोने का ऋण के लिए आवेदन करें और न्यूनतम दस्तावेजीकरण और प्रतिस्पर्धी दरों के साथ तुरंत धन तक पहुंच प्राप्त करें।",
                 "buttonText": "अभी आवेदन करें"
               }
-            }
-          
-        
-      
-    
+            } ,
+              "gallery": {
+                "title": "यूनिगोल्ड फाइनेंस गैलरी",
+                "subtitle": "वित्तीय सेवाओं में उत्कृष्टता के प्रति हमारी प्रतिबद्धता को परिभाषित करने वाले पलों के माध्यम से हमारी यात्रा का अन्वेषण करें",
+                "officeOpening": "नए मुख्यालय का उद्घाटन",
+                "officeOpeningDesc": "वित्तीय जिले में हमारे अत्याधुनिक कॉर्पोरेट मुख्यालय का उद्घाटन समारोह",
+                "teamRetreat": "वार्षिक टीम रिट्रीट",
+                "teamRetreatDesc": "पहाड़ों में हमारे वार्षिक रणनीति रिट्रीट के दौरान हमारी टीम मजबूत बंधन बना रही है",
+                "awardCeremony": "उद्योग उत्कृष्टता पुरस्कार",
+                "awardCeremonyDesc": "यूनिगोल्ड फाइनेंस को वर्ष के सबसे नवीन वित्तीय सेवा प्रदाता के रूप में मान्यता दी गई",
+                "clientEvent": "विशेष ग्राहक कार्यक्रम",
+                "clientEventDesc": "हमारे मूल्यवान ग्राहकों और भागीदारों के साथ नेटवर्किंग और वित्तीय अंतर्दृष्टि की एक शाम",
+                "charityWork": "सामुदायिक सहायता पहल",
+                "charityWorkDesc": "हमारी कॉर्पोरेट सामाजिक जिम्मेदारी कार्यक्रम के तहत स्थानीय आश्रय स्थलों पर हमारी टीम स्वयंसेवा कर रही है",
+                "newProduct": "गोल्ड-बैक्ड निवेश लॉन्च",
+                "newProductDesc": "बाजार में हमारे क्रांतिकारी सोना-आधारित निवेश उत्पाद का परिचय",
+                "readMore": "अधिक पढ़ें",
+                "loadMore": "और लोड करें"
+              },
+              "categories": {
+                "facilities": "सुविधाएं",
+                "events": "आयोजन",
+                "achievements": "उपलब्धियां",
+                "csr": "सीएसआर",
+                "products": "उत्पाद"
+              },
+              "news": {
+                "title": "ताजा समाचार",
+                "subtitle": "हमारी कंपनी की घोषणाओं और वित्तीय अपडेट के साथ अपडेट रहें",
+                "newBranch": {
+                  "title": "मुंबई में नई शाखा का उद्घाटन",
+                  "excerpt": "यूनिगोल्ड फाइनेंस ने मुंबई के वित्तीय जिले में एक नई फ्लैगशिप शाखा के साथ अपनी उपस्थिति का विस्तार किया है।"
+                },
+                "quarterlyResults": {
+                  "title": "रिकॉर्ड तिमाही परिणाम",
+                  "excerpt": "कंपनी ने Q3 2023 के लिए सोना-आधारित निवेश में 25% की वृद्धि दर्ज की है।"
+                },
+                "readMore": "अधिक पढ़ें"
+              },
+              "events": {
+                "title": "आगामी कार्यक्रम",
+                "subtitle": "हमारे वित्तीय सेमिनार और निवेशक बैठकों में शामिल हों",
+                "upcoming": "आगामी",
+                "register": "अभी पंजीकरण करें",
+                "investmentSeminar": {
+                  "title": "सोना निवेश सेमिनार",
+                  "location": "दिल्ली कन्वेंशन सेंटर"
+                },
+                "annualMeeting": {
+                  "title": "वार्षिक निवेशक बैठक",
+                  "location": "वर्चुअल इवेंट"
+                }
+              },
+              "testimonials": {
+                "title": "ग्राहक प्रशंसापत्र",
+                "subtitle": "हमारे बहुमूल्य ग्राहक हमारी सेवाओं के बारे में क्या कहते हैं",
+                "client1": {
+                  "name": "राजेश मेहता",
+                  "designation": "सोना निवेशक",
+                  "quote": "यूनिगोल्ड के सुरक्षित सोना निवेश योजनाओं ने मुझे पिछले साल 18% रिटर्न दिया - बाजार में सबसे अच्छा!"
+                },
+                "client2": {
+                  "name": "प्रिया शर्मा",
+                  "designation": "व्यवसाय मालिक",
+                  "quote": "उनके सोना ऋण ने मुझे सबसे कम ब्याज दरों पर अपना व्यवसाय विस्तार करने में मदद की।"
+                },
+                "client3": {
+                  "name": "अमित पटेल",
+                  "designation": "सेवानिवृत्त बैंकर",
+                  "quote": "मैं अपने परिवार की सोना संपत्ति यूनिगोल्ड को सौंपता हूं क्योंकि उनकी सुरक्षा प्रणाली अद्वितीय है।"
+                }
+              }
+            
   
 }
