--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -323,10 +323,77 @@
                   "description": "ଆଜି ଏକ ସୁନା ଋଣ ପାଇଁ ଆବେଦନ କରନ୍ତୁ ଏବଂ ନ୍ୟୁନତମ ଡକ୍ୟୁମେଣ୍ଟେସନ୍ ଏବଂ ପ୍ରତିଯୋଗିତାମୂଳକ ହାର ସହିତ ତୁରନ୍ତ ଅର୍ଥ ପ୍ରାପ୍ତ କରନ୍ତୁ |",
                   "buttonText": "ବର୍ତ୍ତମାନ ଆବେଦନ କରନ୍ତୁ"
                 }
-              }
-            
-          
-        
-      
-    
+              },
+                "gallery": {
+                  "title": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ଗ୍ୟାଲେରୀ",
+                  "subtitle": "ଆମର ଆର୍ଥିକ ସେବାରେ ଉତ୍କର୍ଷ ପ୍ରତି ଆମର ପ୍ରତିବଦ୍ଧତାକୁ ପରିଭାଷିତ କରୁଥିବା ମୁହୂର୍ତ୍ତଗୁଡ଼ିକ ମାଧ୍ୟମରେ ଆମର ଯାତ୍ରା ଅନୁଭବ କରନ୍ତୁ",
+                  "officeOpening": "ନୂତନ ମୁଖ୍ୟାଳୟ ଉଦ୍ଘାଟନ",
+                  "officeOpeningDesc": "ଆର୍ଥିକ ଜିଲ୍ଲାରେ ଆମର ଆଧୁନିକ କର୍ପୋରେଟ୍ ମୁଖ୍ୟାଳୟର ଉଦ୍ଘାଟନ ଉତ୍ସବ",
+                  "teamRetreat": "ବାର୍ଷିକ ଟିମ୍ ରିଟ୍ରିଟ୍",
+                  "teamRetreatDesc": "ପର୍ବତରେ ଆମର ବାର୍ଷିକ ଷ୍ଟ୍ରାଟେଜି ରିଟ୍ରିଟ୍ ସମୟରେ ଆମର ଟିମ୍ ମଜଭୁତ ବନ୍ଧନ ଗଠନ କରୁଛି",
+                  "awardCeremony": "ଇଣ୍ଡଷ୍ଟ୍ରି ଏକ୍ସଲେନ୍ସ ପୁରସ୍କାର",
+                  "awardCeremonyDesc": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସକୁ ବର୍ଷର ସବୁଠାରୁ ନବୀନ ଆର୍ଥିକ ସେବା ପ୍ରଦାନକାରୀ ଭାବରେ ସ୍ୱୀକୃତି ଦିଆଯାଇଛି",
+                  "clientEvent": "ଏକ୍ସକ୍ଲୁସିଭ୍ କ୍ଲାଏଣ୍ଟ ଇଭେଣ୍ଟ୍",
+                  "clientEventDesc": "ଆମର ମୂଲ୍ୟବାନ ଗ୍ରାହକ ଏବଂ ପାର୍ଟନର୍ମାନଙ୍କ ସହିତ ନେଟୱର୍କିଂ ଏବଂ ଆର୍ଥିକ ଅନ୍ତର୍ଦୃଷ୍ଟିର ଏକ ସନ୍ଧ୍ୟା",
+                  "charityWork": "କମ୍ୟୁନିଟି ସମର୍ଥନ ପ୍ରୟାସ",
+                  "charityWorkDesc": "ଆମର କର୍ପୋରେଟ୍ ସାମାଜିକ ଦାୟିତ୍ୱ ପ୍ରୋଗ୍ରାମ୍ ରୂପେ ସ୍ଥାନୀୟ ଆଶ୍ରୟସ୍ଥଳୀରେ ଆମର ଟିମ୍ ସ୍ୱେଚ୍ଛାସେବୀ",
+                  "newProduct": "ଗୋଲ୍ଡ-ବ୍ୟାକ୍ଡ ଇନ୍ଭେଷ୍ଟମେଣ୍ଟ ଲଞ୍ଚ୍",
+                  "newProductDesc": "ବଜାରରେ ଆମର ବିପ୍ଳବୀ ସୁନା-ଆଧାରିତ ନିବେଶ ଉତ୍ପାଦ ପରିଚୟ",
+                  "readMore": "ଅଧିକ ପଢନ୍ତୁ",
+                  "loadMore": "ଅଧିକ ଲୋଡ୍ କରନ୍ତୁ"
+                },
+                "categories": {
+                  "facilities": "ସୁବିଧା ସୁଯୋଗ",
+                  "events": "ଇଭେଣ୍ଟ୍",
+                  "achievements": "ସାଧନା",
+                  "csr": "କର୍ପୋରେଟ୍ ସାମାଜିକ ଦାୟିତ୍ୱ",
+                  "products": "ଉତ୍ପାଦ"
+                },
+                "news": {
+                  "title": "ନବୀନତମ ସମାଚାର",
+                  "subtitle": "ଆମର କମ୍ପାନୀ ଘୋଷଣା ଏବଂ ଆର୍ଥିକ ଅଦ୍ୟତନ ସହିତ ଅଦ୍ୟତିତ ରୁହନ୍ତୁ",
+                  "newBranch": {
+                    "title": "ମୁମ୍ବାଇରେ ନୂତନ ଶାଖା ଉଦ୍ଘାଟନ",
+                    "excerpt": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ମୁମ୍ବାଇର ଆର୍ଥିକ ଜିଲ୍ଲାରେ ଏକ ନୂତନ ଫ୍ଲାଗସିପ୍ ଶାଖା ସହିତ ନିଜ ଉପସ୍ଥିତି ବିସ୍ତାର କରିଛି।"
+                  },
+                  "quarterlyResults": {
+                    "title": "ରେକର୍ଡ ତ୍ରୟମାସିକ ଫଳାଫଳ",
+                    "excerpt": "କମ୍ପାନୀ Q3 2023 ପାଇଁ ସୁନା-ଆଧାରିତ ନିବେଶରେ 25% ବୃଦ୍ଧି ରିପୋର୍ଟ କରିଛି।"
+                  },
+                  "readMore": "ଅଧିକ ପଢନ୍ତୁ"
+                },
+                "events": {
+                  "title": "ଆସନ୍ତାକାଳୀନ ଇଭେଣ୍ଟ୍",
+                  "subtitle": "ଆମର ଆର୍ଥିକ ସେମିନାର ଏବଂ ନିବେଶକାରୀ ସଭାରେ ଆମ ସହିତ ଯୋଗ ଦିଅନ୍ତୁ",
+                  "upcoming": "ଆସନ୍ତାକାଳୀନ",
+                  "register": "ବର୍ତ୍ତମାନ ପଞ୍ଜିକରଣ କରନ୍ତୁ",
+                  "investmentSeminar": {
+                    "title": "ସୁନା ନିବେଶ ସେମିନାର",
+                    "location": "ଦିଲ୍ଲୀ କନଭେନସନ ସେଣ୍ଟର"
+                  },
+                  "annualMeeting": {
+                    "title": "ବାର୍ଷିକ ନିବେଶକାରୀ ସଭା",
+                    "location": "ଭର୍ଚୁଆଲ୍ ଇଭେଣ୍ଟ୍"
+                  }
+                },
+                "testimonials": {
+                  "title": "ଗ୍ରାହକଙ୍କ ପ୍ରତିକ୍ରିୟା",
+                  "subtitle": "ଆମର ମୂଲ୍ୟବାନ ଗ୍ରାହକମାନେ ଆମ ସେବା ବିଷୟରେ କ'ଣ କହନ୍ତି",
+                  "client1": {
+                    "name": "ରାଜେଶ ମେହେଟା",
+                    "designation": "ସୁନା ନିବେଶକାରୀ",
+                    "quote": "ୟୁନିଗୋଲ୍ଡର ସୁରକ୍ଷିତ ସୁନା ନିବେଶ ଯୋଜନା ମୋତେ ଗତ ବର୍ଷ 18% ଫେରସ୍ତ ଦେଇଥିଲା - ବଜାରରେ ସର୍ବୋତ୍ତମ!"
+                  },
+                  "client2": {
+                    "name": "ପ୍ରିୟା ଶର୍ମା",
+                    "designation": "ବ୍ୟବସାୟ ମାଲିକ",
+                    "quote": "ସେମାନଙ୍କ ସୁନା ଋଣ ମୋତେ ମୋ ବ୍ୟବସାୟ ବିସ୍ତାର କରିବାରେ ସାହାଯ୍ୟ କରିଥିଲା, ସବୁଠାରୁ କମ୍ ସୁଧ ହାରରେ।"
+                  },
+                  "client3": {
+                    "name": "ଅମିତ ପଟେଲ",
+                    "designation": "ଅବସରପ୍ରାପ୍ତ ବ୍ୟାଙ୍କର",
+                    "quote": "ମୁଁ ମୋ ପରିବାରର ସୁନା ସମ୍ପତ୍ତି ପାଇଁ ୟୁନିଗୋଲ୍ଡକୁ ବିଶ୍ୱାସ କରେ, କାରଣ ସେମାନଙ୍କର ସୁରକ୍ଷା ବ୍ୟବସ୍ଥା ଅତୁଳନୀୟ।"
+                  }
+                }
+                 
 }
